compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__bitwise_const_ops-12.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 xor 1

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..18 }, state: Value(Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 0, sign: Positive, width: As32 })


