compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__bitwise_const_ops-14.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: not 1

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(3))), span: Span { file: None, range: 11..16 }, state: Value(Integer(ConstInt { magnitude: 4294967294, sign: Positive, width: As32 })) },
    ],
    var_to_expr: {
        DefId(0): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 4294967294, sign: Positive, width: As32 })


